--- a/Pj_BIFF/css/sub.css
+++ b/Pj_BIFF/css/sub.css
@@ -199,6 +199,16 @@ body {
     color: #f00;
 }
 
+/* .gnb2 .rb li:nth-child(1){
+    display: none;
+} */
+/* .gnb2 .rb li:nth-child(2){
+    display: none;
+} */
+/* .gnb2 .rb li:nth-child(4){
+    display: none;
+} */
+
 .menu {
     width: 40px;
     height: 40px;
