--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -371,12 +371,21 @@ body {
   }
 
   .swiper-slide {
-      top: 5%;
+    top: 5%;
     font-size: 18px;
     color: #fff;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 40px 60px;
+  }
+
+  .swiper-slide h2{
+    background: url(../img/awards_title_bg.png) no-repeat;
+    background-size: contain;
+    padding: 15px;
+    font-size: 25px;
+    font-weight: bolder;
+    padding-left: 60px;
   }
 
   .parallax-bg {
@@ -394,16 +403,19 @@ body {
   .swiper-slide .title {
     font-size: 41px;
     font-weight: 300;
-  }
+    padding-left: 15px;
+}
 
-  .swiper-slide .subtitle {
+.swiper-slide .subtitle {
     font-size: 21px;
-  }
+    padding-left: 20px;
+}
 
-  .swiper-slide .text {
+.swiper-slide .text {
     font-size: 14px;
     max-width: 400px;
     line-height: 1.3;
+    padding-left: 20px;
   }
 
 .swiper-slide:nth-of-type(3){
@@ -415,17 +427,23 @@ body {
     background-position: center;
     background-size: cover;
 }
+.swiper-slide:nth-of-type(3) h2{
+    padding-left: 53px;
+    }
 .swiper-slide:nth-of-type(4){
-    background-image: url(../img/04.jpg);
+    background-image: url(../img/cm6.jpeg);
     top: 5%;
     left: 0;
     width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
+}
+.swiper-slide:nth-of-type(4) h2{
+padding-left: 30px;
 }
 .swiper-slide:nth-of-type(5){
-    background-image: url(../img/05.jpg);
+    background-image: url(../img/cm3.jpeg);
     top: 5%;
     left: 0;
     width: 100%;
@@ -433,12 +451,16 @@ body {
     background-position: center;
     background-size: cover;
 }
+.swiper-slide:nth-of-type(5) h2{
+    padding-left: 52px;
+    }
+    
 .swiper-slide:nth-of-type(6){
-    background-image: url(../img/06.jpg);
+    background-image: url(../img/cm1.jpeg);
     top: 5%;
-    /* left: 0; */
-    /* width: 100%; */
-    /* height: 100%; */
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-position: center;
     background-size: cover;
 }
