--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -377,6 +377,7 @@ body {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 40px 60px;
+    cursor: pointer;
   }
 
   .swiper-slide h2{
