--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -15,7 +15,8 @@ ol {
     list-style: none;
 }
 
-html,body {
+html,
+body {
     overflow: hidden;
     font-family: 'Gowun Batang', serif;
 }
@@ -55,44 +56,45 @@ body {
     box-sizing: border-box;
 }
 
-    /*********************************************** 인디케이터 ***********************************************/
-    .indic {
-        position: fixed;
-        top: 50%;
-        transform: translateY(-50%);
-        /* 세로중앙이동 */
-        left: 1%;
-        width: 20px;
-    }
-    
-    .indic li {
-        width: 100%;
-        height: 10px;
-        margin: 3px 0;
-        cursor: pointer;
-    }
-    
-    .indic a {
-        display: block;
-        width: 100%;
-        height: 2px;
-        margin-top: 4px;
-        background-color: #ccc;
-        box-shadow: 1px 1px 1px #777;
-        transition: width .4s;
-    }
-    
-    /* 마우스 오버시 + 클래스 "on" */
-    .indic li:hover a,
-    .indic li.on a {
-        width: 150%;
-        background-color: #fff;
-    }
-    
-    /* 설명글자숨기기 */
-    .indic span {
-        display: none;
-    }
+/*********************************************** 인디케이터 ***********************************************/
+.indic {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    /* 세로중앙이동 */
+    left: 1%;
+    width: 20px;
+}
+
+.indic li {
+    width: 100%;
+    height: 10px;
+    margin: 3px 0;
+    cursor: pointer;
+}
+
+.indic a {
+    display: block;
+    width: 100%;
+    height: 2px;
+    margin-top: 4px;
+    background-color: #ccc;
+    box-shadow: 1px 1px 1px #777;
+    transition: width .4s;
+}
+
+/* 마우스 오버시 + 클래스 "on" */
+.indic li:hover a,
+.indic li.on a {
+    width: 150%;
+    background-color: #fff;
+}
+
+/* 설명글자숨기기 */
+.indic span {
+    display: none;
+}
+
 /*********************************************** 인디케이터 ***********************************************/
 
 
@@ -146,7 +148,7 @@ body {
     margin: 0 auto;
     overflow: hidden;
     display: flex;
-    
+
     animation: menuAni 1s ease-out 1s forwards;
 }
 
@@ -191,18 +193,17 @@ body {
     color: #fff;
 }
 
-.gnb2 a:hover
-,
-.gnb2 li.on a
-{
+.gnb2 a:hover,
+.gnb2 li.on a {
     /* text-decoration: 1px underline #f00; */
     color: #f00;
 }
 
-.gnb2 .rb li:nth-child(1){
+.gnb2 .rb li:nth-child(1) {
     display: none;
 }
-.gnb2 .rb li:nth-child(2){
+
+.gnb2 .rb li:nth-child(2) {
     display: none;
 }
 
@@ -267,7 +268,7 @@ body {
     text-decoration: none;
 }
 
-.gnb1>ul{
+.gnb1>ul {
     margin: 0 auto;
 }
 
@@ -295,36 +296,38 @@ body {
     line-height: 2.2;
 }
 
-.gnb1>ul>li a{
+.gnb1>ul>li a {
     width: 320px;
     display: block;
     transition: .5s;
-    
+
 }
 
-.gnb1>ul>li:hover>a{
+.gnb1>ul>li:hover>a {
     color: red;
     background-color: #3d3d3d;
 }
 
-.smenu{
+.smenu {
     height: 0;
     overflow: hidden;
     transition: height .4s ease-in-out;
 }
 
-.smenu a:hover{
+.smenu a:hover {
     color: yellow;
     background-color: #d6b821c7;
 }
 
-.gnb1>ul>li:nth-child(1):hover .smenu{
+.gnb1>ul>li:nth-child(1):hover .smenu {
     height: 140px;
 }
-.gnb1>ul>li:nth-child(2):hover .smenu{
+
+.gnb1>ul>li:nth-child(2):hover .smenu {
     height: 180px;
 }
-.gnb1>ul>li:nth-child(3):hover .smenu{
+
+.gnb1>ul>li:nth-child(3):hover .smenu {
     height: 80px;
 }
 
@@ -368,9 +371,9 @@ body {
     width: 100%;
     height: 100%;
     background: #000;
-  }
+}
 
-  .swiper-slide {
+.swiper-slide {
     top: 5%;
     font-size: 18px;
     color: #fff;
@@ -378,18 +381,18 @@ body {
     box-sizing: border-box;
     padding: 40px 60px;
     cursor: pointer;
-  }
+}
 
-  .swiper-slide h2{
+.swiper-slide h2 {
     background: url(../img/awards_title_bg.png) no-repeat;
     background-size: contain;
     padding: 15px;
     font-size: 25px;
     font-weight: bolder;
     padding-left: 60px;
-  }
+}
 
-  .parallax-bg {
+.parallax-bg {
     position: absolute;
     left: 0;
     top: 0;
@@ -398,10 +401,10 @@ body {
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center;
-  }
+}
 
 
-  .swiper-slide .title {
+.swiper-slide .title {
     font-size: 41px;
     font-weight: 300;
     padding-left: 15px;
@@ -417,9 +420,9 @@ body {
     max-width: 400px;
     line-height: 1.3;
     padding-left: 20px;
-  }
+}
 
-.swiper-slide:nth-of-type(3){
+.swiper-slide:nth-of-type(3) {
     background-image: url(../img/sub1m.jpg);
     top: 5%;
     left: 0;
@@ -428,10 +431,12 @@ body {
     background-position: center;
     background-size: cover;
 }
-.swiper-slide:nth-of-type(3) h2{
+
+.swiper-slide:nth-of-type(3) h2 {
     padding-left: 53px;
-    }
-.swiper-slide:nth-of-type(4){
+}
+
+.swiper-slide:nth-of-type(4) {
     background-image: url(../img/cm6.jpeg);
     top: 5%;
     left: 0;
@@ -440,10 +445,12 @@ body {
     background-position: center;
     background-size: cover;
 }
-.swiper-slide:nth-of-type(4) h2{
-padding-left: 30px;
+
+.swiper-slide:nth-of-type(4) h2 {
+    padding-left: 30px;
 }
-.swiper-slide:nth-of-type(5){
+
+.swiper-slide:nth-of-type(5) {
     background-image: url(../img/cm3.jpeg);
     top: 5%;
     left: 0;
@@ -452,11 +459,12 @@ padding-left: 30px;
     background-position: center;
     background-size: cover;
 }
-.swiper-slide:nth-of-type(5) h2{
+
+.swiper-slide:nth-of-type(5) h2 {
     padding-left: 52px;
-    }
-    
-.swiper-slide:nth-of-type(6){
+}
+
+.swiper-slide:nth-of-type(6) {
     background-image: url(../img/cm1.jpeg);
     top: 5%;
     left: 0;
@@ -471,14 +479,7 @@ padding-left: 30px;
     position: relative;
 }
 
-.dselect{
-    cursor: pointer;
-    user-select: none;
-    /* 선택안되게함 */
-    -webkit-user-drag: none;
-    /* 드래그안되게함 */
-}
-.dselect1{
+.dselect {
     cursor: pointer;
     user-select: none;
     /* 선택안되게함 */
@@ -486,7 +487,15 @@ padding-left: 30px;
     /* 드래그안되게함 */
 }
 
-.cont3 h2{
+.dselect1 {
+    cursor: pointer;
+    user-select: none;
+    /* 선택안되게함 */
+    -webkit-user-drag: none;
+    /* 드래그안되게함 */
+}
+
+.cont3 h2 {
     text-align: center;
     padding-top: 90px;
     font-size: 2vmax;
@@ -501,6 +510,7 @@ padding-left: 30px;
     width: 100%;
     overflow: hidden;
 }
+
 #handle1 {
     top: 5%;
     position: relative;
@@ -513,12 +523,13 @@ padding-left: 30px;
 /*갤러리 내용만큼 가로로큰 내부박스-움직일박스*/
 #move {
     position: absolute;
-               /* width: 7200px; */
+    /* width: 7200px; */
     height: 100%;
 }
+
 #move1 {
     position: absolute;
-               /* width: 7200px; */
+    /* width: 7200px; */
     height: 100%;
 }
 
@@ -527,6 +538,7 @@ padding-left: 30px;
     width: 100%;
     height: 100%;
 }
+
 #move1 img {
     position: relative;
     width: 100%;
@@ -537,6 +549,7 @@ padding-left: 30px;
 #move>ul {
     display: flex;
 }
+
 #move1>ul {
     display: flex;
 }
@@ -546,18 +559,19 @@ padding-left: 30px;
     width: 35vmin;
     height: 25vmin;
 }
+
 #move1>ul li {
     position: relative;
     width: 35vmin;
     height: 25vmin;
 }
 
-.case{
+.case {
     top: 50%;
 }
 
 /******************************************* Cont4 ******************************************/
-.cont4{
+.cont4 {
     color: #000;
 }
 
@@ -648,8 +662,9 @@ padding-left: 30px;
 .film_tit a {
     color: #fff;
 }
-.film_tit{
-cursor: pointer;
+
+.film_tit {
+    cursor: pointer;
 }
 
 .tbl_schedule .sch_li .sch_it .film_tit .film_tit_kor {
@@ -791,7 +806,6 @@ cursor: pointer;
     top: 12px;
     left: 0;
 }
-
 
 /******************************************* 하단 *******************************************/
 
