--- a/Pj_BIFF/css/sub.css
+++ b/Pj_BIFF/css/sub.css
@@ -16,7 +16,8 @@ ol {
     list-style: none;
 }
 
-html,body {
+html,
+body {
     overflow: hidden;
     font-family: 'Gowun Batang', serif;
 }
@@ -56,44 +57,45 @@ body {
     box-sizing: border-box;
 }
 
-    /*********************************************** 인디케이터 ***********************************************/
-    .indic {
-        position: fixed;
-        top: 50%;
-        transform: translateY(-50%);
-        /* 세로중앙이동 */
-        left: 1%;
-        width: 20px;
-    }
-    
-    .indic li {
-        width: 100%;
-        height: 10px;
-        margin: 3px 0;
-        cursor: pointer;
-    }
-    
-    .indic a {
-        display: block;
-        width: 100%;
-        height: 2px;
-        margin-top: 4px;
-        background-color: #ccc;
-        box-shadow: 1px 1px 1px #777;
-        transition: width .4s;
-    }
-    
-    /* 마우스 오버시 + 클래스 "on" */
-    .indic li:hover a,
-    .indic li.on a {
-        width: 150%;
-        background-color: #fff;
-    }
-    
-    /* 설명글자숨기기 */
-    .indic span {
-        display: none;
-    }
+/*********************************************** 인디케이터 ***********************************************/
+.indic {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    /* 세로중앙이동 */
+    left: 1%;
+    width: 20px;
+}
+
+.indic li {
+    width: 100%;
+    height: 10px;
+    margin: 3px 0;
+    cursor: pointer;
+}
+
+.indic a {
+    display: block;
+    width: 100%;
+    height: 2px;
+    margin-top: 4px;
+    background-color: #ccc;
+    box-shadow: 1px 1px 1px #777;
+    transition: width .4s;
+}
+
+/* 마우스 오버시 + 클래스 "on" */
+.indic li:hover a,
+.indic li.on a {
+    width: 150%;
+    background-color: #fff;
+}
+
+/* 설명글자숨기기 */
+.indic span {
+    display: none;
+}
+
 /*********************************************** 인디케이터 ***********************************************/
 
 
@@ -147,7 +149,7 @@ body {
     margin: 0 auto;
     overflow: hidden;
     display: flex;
-    
+
     animation: menuAni 1s ease-out 1s forwards;
 }
 
@@ -192,10 +194,8 @@ body {
     color: #fff;
 }
 
-.gnb2 a:hover
-,
-.gnb2 li.on a
-{
+.gnb2 a:hover,
+.gnb2 li.on a {
     color: #f00;
 }
 
@@ -270,7 +270,7 @@ body {
     text-decoration: none;
 }
 
-.gnb1>ul{
+.gnb1>ul {
     margin: 0 auto;
 }
 
@@ -298,45 +298,47 @@ body {
     line-height: 2.2;
 }
 
-.gnb1>ul>li a{
+.gnb1>ul>li a {
     width: 320px;
     display: block;
     transition: .5s;
-    
+
 }
 
-.gnb1>ul>li:hover>a{
+.gnb1>ul>li:hover>a {
     color: red;
     background-color: #3d3d3d;
 }
 
-.smenu{
+.smenu {
     height: 0;
     overflow: hidden;
     transition: height .4s ease-in-out;
 }
 
-.smenu a:hover{
+.smenu a:hover {
     color: yellow;
     background-color: #d6b821c7;
 }
 
-.gnb1>ul>li:nth-child(1):hover .smenu{
+.gnb1>ul>li:nth-child(1):hover .smenu {
     height: 140px;
 }
-.gnb1>ul>li:nth-child(2):hover .smenu{
+
+.gnb1>ul>li:nth-child(2):hover .smenu {
     height: 180px;
 }
-.gnb1>ul>li:nth-child(3):hover .smenu{
+
+.gnb1>ul>li:nth-child(3):hover .smenu {
     height: 80px;
 }
 
 /******************************************* Cont2 *******************************************/
-.cont2{
+.cont2 {
     position: relative;
 }
 
-.back{
+.back {
     position: absolute;
     top: 9%;
     left: 3%;
@@ -359,36 +361,39 @@ body {
     background-position: center;
     background-size: cover;
     filter: brightness(85%);
-  }
+}
 
-  .Mtxt{
-      position: absolute;
-      top: 70%;
-      left: 3%;
-  }
+.Mtxt {
+    position: absolute;
+    top: 70%;
+    left: 3%;
+}
 
-  .Mtxt li:first-child{
-      font-size: 2vmax;
-      font-weight: bold;
-  }
-  .Mtxt li:nth-child(2){
+.Mtxt li:first-child {
+    font-size: 2vmax;
+    font-weight: bold;
+}
+
+.Mtxt li:nth-child(2) {
     font-size: 1.5vmax;
-  }
-  .Mtxt li:nth-child(3){
+}
+
+.Mtxt li:nth-child(3) {
     font-size: 1vmax;
-  }
-  .Mtxt li:last-child{
+}
+
+.Mtxt li:last-child {
     font-size: 1vmax;
-  }
-  
-  .play-button {
+}
+
+.play-button {
     width: 152px;
     height: 152px;
     position: relative;
     cursor: pointer;
-  }
-  
-  .play-backdrop {
+}
+
+.play-backdrop {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -397,9 +402,9 @@ body {
     background-color: #000;
     opacity: 0;
     visibility: hidden;
-  }
-  
-  .play-close {
+}
+
+.play-close {
     width: 30px;
     height: 30px;
     position: absolute;
@@ -410,10 +415,10 @@ body {
     background: none;
     opacity: 0;
     cursor: pointer;
-  }
-  
-  .play-close::before,
-  .play-close::after {
+}
+
+.play-close::before,
+.play-close::after {
     content: "";
     display: block;
     width: 100%;
@@ -422,39 +427,39 @@ body {
     top: 50%;
     left: 0;
     -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
+    transform: rotate(45deg);
     background-color: #fff;
-  }
-  
-  .play-close::after {
+}
+
+.play-close::after {
     -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-  }
-  
-  .play-circles {
+    transform: rotate(-45deg);
+}
+
+.play-circles {
     display: block;
     width: 100%;
     height: 100%;
-  }
-  
-  .play-perspective {
+}
+
+.play-perspective {
     width: 600px;
     height: 400px;
     position: absolute;
     left: -230px;
     top: -125px;
-  }
-  
-  .play-triangle {
+}
+
+.play-triangle {
     width: 600px;
     height: 400px;
     background-color: #fff;
     cursor: pointer;
-  }
-  
+}
+
 
 /******************************************* Cont4 ******************************************/
-.cont4{
+.cont4 {
     color: #000;
 }
 
@@ -545,8 +550,9 @@ body {
 .film_tit a {
     color: #fff;
 }
-.film_tit{
-cursor: pointer;
+
+.film_tit {
+    cursor: pointer;
 }
 
 .tbl_schedule .sch_li .sch_it .film_tit .film_tit_kor {
