--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -375,12 +375,19 @@ body {
 
 .swiper-slide {
     top: 5%;
+    left: 0;
+    width: 100%;
+    height: 100%;
     font-size: 18px;
     color: #fff;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 40px 60px;
     cursor: pointer;
+
+    background-image: url(../img/mi4.jpeg);
+    background-position: center;
+    background-size: cover;
 }
 
 .swiper-slide h2 {
@@ -422,57 +429,40 @@ body {
     padding-left: 20px;
 }
 
+
+.swiper-slide:nth-of-type(2) {
+    background-image: url(../img/mi4.jpeg);
+}
 .swiper-slide:nth-of-type(3) {
     background-image: url(../img/sub1m.jpg);
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+}
+.swiper-slide:nth-of-type(4) {
+    background-image: url(../img/cm3.jpeg);
+}
+
+.swiper-slide:nth-of-type(5) {
+    background-image: url(../img/cm6.jpeg);
+}
+.swiper-slide:nth-of-type(6) {
+    background-image: url(../img/cm3.jpeg);
+}
+.swiper-slide:nth-of-type(1) {
+    background-image: url(../img/cm1.jpeg);
 }
 
 .swiper-slide:nth-of-type(3) h2 {
     padding-left: 53px;
 }
 
-.swiper-slide:nth-of-type(4) {
-    background-image: url(../img/cm6.jpeg);
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-
 .swiper-slide:nth-of-type(4) h2 {
     padding-left: 30px;
 }
 
-.swiper-slide:nth-of-type(5) {
-    background-image: url(../img/cm3.jpeg);
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-}
 
 .swiper-slide:nth-of-type(5) h2 {
     padding-left: 52px;
 }
 
-.swiper-slide:nth-of-type(6) {
-    background-image: url(../img/cm1.jpeg);
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-}
 
 /******************************************* Cont3 *******************************************/
 .cont3 {
