--- a/Pj_BIFF/css/sub4.css
+++ b/Pj_BIFF/css/sub4.css
@@ -356,7 +356,15 @@ audio{
     background-size: cover;
 }
 
-.Mtxt {
+.Mvideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    text-align: center;
+}
+
+/* .Mtxt {
     position: absolute;
     top: 30%;
     left: 5%;
@@ -378,12 +386,12 @@ audio{
 
 .Mtxt li:last-child {
     font-size: 1vmax;
-}
+} */
 
 .play-button {
-    width: 152px;
-    height: 152px;
-    position: relative;
+    width: 100px;
+    height: 100px;
+    position: absolute;
     cursor: pointer;
     z-index: 99999;
 }
