--- a/Pj_BIFF/css/sub4.css
+++ b/Pj_BIFF/css/sub4.css
@@ -330,7 +330,7 @@ audio{
 }
 
 /******************************************* Cont2 *******************************************/
-.cont2 {
+.cont1 {
     position: relative;
 }
 
@@ -339,14 +339,13 @@ audio{
     top: 9%;
     left: 3%;
     z-index: 99;
-    /* background: url(../img/3list.png) no-repeat; */
     padding-left: 25px;
     background-position-y: 6px;
     color: #fff;
     cursor: pointer;
 }
 
-.cont2 {
+.cont1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -460,243 +459,44 @@ audio{
     cursor: pointer;
 }
 
+/******************************************* Cont3 ******************************************/
+.characters{
+    margin: 0 auto;
+    max-width: 1300px;
+    padding: 60px 60px 80px;
+    background-color: rgb(244 242 243 / 78%);
+}
+
+.characters h2{
+    font-size: 260%;
+    line-height: 1.2em;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+    font-weight: normal;
+    margin-bottom: 0;
+}
+
+.cbwrap>.box1:first-child{
+    padding-top: 30px;
+}
+.cbwrap>.box1{
+    position: relative;
+    padding: 0;
+    margin-bottom: -1px;
+}
+
+.cbwrap > div > div{
+    padding: 15px 0;
+}
+
+
 
 /******************************************* Cont4 ******************************************/
 .cont4 {
     color: #000;
 }
 
-.tbl_schedule .sch_li:first-child {
-    padding-top: 0;
-    border-top: 0;
-}
-
-.tbl_schedule .sch_li {
-    position: relative;
-    display: block;
-    padding: 20px 0;
-    border-top: 1px dashed #e0e0e0;
-}
-
-.tbl_schedule .sch_li:before {
-    clear: both;
-    display: block;
-    content: '';
-}
-
-.tbl_schedule .sch_li .sch_li_tit {
-    width: 100%;
-    font-size: 19px;
-    color: #111;
-    background: #f5f5f5;
-    font-weight: 500;
-    padding: 15px;
-    letter-spacing: -1px;
-    border: 1px solid #e0e0e0;
-    border-bottom: none;
-}
-
-.tbl_schedule .sch_li .sch_it.blank_wrap {
-    background: #f8f8f8;
-    border-top: 1px solid #e0e0e0 !important;
-}
-
-.tbl_schedule .sch_li .sch_it {
-    position: relative;
-    display: block;
-    float: left;
-    padding: 15px;
-    width: 16.6%;
-    border: 1px solid #e0e0e0;
-    height: 215px;
-}
-
-.tbl_schedule .sch_li .sch_it .sch_it_blank {
-    display: block;
-    width: 100%;
-    padding: 0;
-}
-
-.tbl_schedule .sch_li .sch_it .code {
-    position: absolute;
-    top: 15px;
-    right: 10px;
-    font-size: 13px;
-    line-height: 1.5;
-    border: 0px solid #eddfbf;
-    color: #3f538d;
-    background-color: #eef2ff;
-    font-weight: bold;
-    padding: 2px 6px;
-    border-radius: 50%;
-}
-
-.tbl_schedule .sch_li .sch_it .time {
-    color: #000;
-    font-size: 18px;
-    line-height: 1.5;
-    display: inline-block;
-    margin-top: 0;
-}
-
-.en {
-    font-size: 27px;
-    letter-spacing: 0 !important;
-}
-
-.tbl_schedule .sch_li .sch_it .film_tit {
-    line-height: 1.5;
-    height: 72px;
-    overflow: hidden;
-}
-
-.film_tit a {
-    color: #fff;
-}
-
-.film_tit {
-    cursor: pointer;
-}
-
-.tbl_schedule .sch_li .sch_it .film_tit .film_tit_kor {
-    color: #000;
-    display: block;
-    font-size: 18px;
-    line-height: 1.45;
-    word-break: keep-all;
-    margin-bottom: 6px;
-}
-
-.tbl_schedule .sch_li .sch_it .film_tit .film_tit_eng {
-    display: block;
-    font-size: 13px;
-    color: #888;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    width: 90%;
-}
-
-.tbl_schedule .sch_li .sch_it .grade {
-    position: absolute;
-    bottom: 15px;
-    left: 15px;
-    margin-top: 15px;
-}
-
-.grade {
-    display: inline-block;
-    background-position: 0 center;
-    background-repeat: no-repeat;
-    font-size: 0;
-    vertical-align: middle;
-}
-
-.tbl_schedule .sch_li .sch_it .grade>span {
-    margin-right: 3px;
-}
-
-.ico_grade.ico_15 {
-    background-image: url(../img/ico_15.png);
-}
-
-.ico_grade.ico_gv {
-    background-image: url(../img/ico_gv.png);
-}
-
-.ico_grade {
-    position: relative;
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    vertical-align: middle;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-}
-
-.tbl_schedule .sch_li .sch_it:last-child {
-    border-right: 1px solid #e0e0e0 !important;
-}
-
-.tbl_schedule .sch_li:before,
-.tbl_schedule .sch_li:after {
-    clear: both;
-    display: block;
-    content: '';
-}
-
-.tbl_schedule .sch_li:nth-child(1) {
-    background: #fff;
-}
-
-.tbl_schedule .sch_li:nth-child(2) {
-    background: #fff;
-}
-
-.caution_box {
-    border: 1px solid #f7f7f7;
-    background: #e0e0e0;
-    padding: 20px 30px;
-}
-
-.tit_schedule {
-    position: relative;
-    top: 18px;
-    padding: 2%;
-    text-align: center;
-    background: #e0e0e0;
-    color: #000;
-}
-
-.row {
-    display: flex;
-    flex: 1 0 100%;
-    flex-wrap: wrap;
-}
-
-.tit-sec {
-    font-size: 28px;
-    line-height: 1.5;
-    letter-spacing: -1.3px;
-    word-break: keep-all;
-    margin-bottom: 10px;
-}
-
-.mt10 {
-    margin-top: 10px;
-}
-
-.bold {
-    color: #000;
-    font-weight: bold !important;
-}
-
-.list_secondary>li:first-child {
-    margin-top: 0;
-}
-
-.list_secondary>li {
-    position: relative;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.8;
-    margin: 6px 0;
-    padding-left: 10px;
-    letter-spacing: -0.5px;
-    word-break: keep-all;
-    color: #686767;
-}
-
-.list_secondary>li:before {
-    content: '';
-    display: inline-block;
-    width: 2px;
-    height: 2px;
-    background: #aaa;
-    position: absolute;
-    top: 12px;
-    left: 0;
-}
 
 
 /******************************************* 하단 *******************************************/
