--- a/Pj_BIFF/css/sub4.css
+++ b/Pj_BIFF/css/sub4.css
@@ -22,8 +22,8 @@ ol {
 html,
 body {
     /* overflow: hidden; */
-    font-family: 'Gowun Batang', serif;
     font-family: 'IM Fell English SC', serif;
+    font-family: 'Poor Story', cursive;
 }
 
 a {
@@ -32,7 +32,7 @@ a {
 }
 
 body {
-    background-color: #9ec0cb;
+    background-color: #fad9ce;
     color: #333333;}
     
 
@@ -619,18 +619,22 @@ section .inner{
     font-size: 17px;
 }
 
+.cont3 .txtbx p{
+    text-decoration: underline;
+}
+
 
 /******************************************* 하단 *******************************************/
 
 #ft {
     position: relative;
     margin: 0 0 0 0;
-    color: #fff;
+    color: #3e3e3e;
 }
 
 #ft .footer_inner {
     position: relative;
-    background: #9ec0cb;
+    background: #fad9ce;
     padding: 30px 0 0;
 }
 
@@ -706,7 +710,7 @@ section .inner{
     right: 0;
     width: 1px;
     height: 14px;
-    background: #fff;
+    background: #bcbcbc;
 }
 
 #ft .fnb li a {
@@ -714,12 +718,12 @@ section .inner{
     font-size: 13px;
     line-height: 1.6;
     font-weight: 500;
-    color: #fff;
+    color: #3e3e3e;
     letter-spacing: -0.2px
 }
 
 #ft .foot_line {
-    border-top: 1px solid #fff;
+    border-top: 1px solid #bcbcbc;
 }
 
 .row {
