--- a/Pj_BIFF/css/sub4.css
+++ b/Pj_BIFF/css/sub4.css
@@ -573,6 +573,7 @@ p{
     background-image: url(../img/sub4img/utaka.gif);
     background-size: 540px auto;
     top: 0;
+    left: 12%;
 }
 .cbwrap .imgtxtbx > .fifimg{
     background-image: url(../img/sub4img/umi0.jpeg);
