--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -62,12 +62,12 @@ audio{
 
 /******************************************* 상단 *******************************************/
 #top {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
-    background-color: #242221c4;
+    height: 45px;
+    background-color: #2422213a;
     z-index: 999;
 }
 
@@ -185,7 +185,7 @@ audio{
     right: -100%;
     height: 100%;
     /* 보이는 화면에 꽉참 */
-    background-color: #000;
+    background-color: #8fb5c4;
     transition: right .4s ease-in-out;
 }
 
@@ -203,7 +203,7 @@ audio{
     color: #fff;
     border: 1px solid transparent;
     border-radius: 50%;
-    background-color: rgb(0, 0, 0);
+    background-color: #ffffff00;
     padding: 0;
     cursor: pointer;
 }
@@ -242,14 +242,20 @@ audio{
 
 .gnb1>ul>li a {
     width: 320px;
+    font-weight: bolder;
     display: block;
     transition: .5s;
 
 }
 
 .gnb1>ul>li:hover>a {
-    color: red;
-    background-color: #3d3d3d;
+    color: #31da12;
+    background-color: #213490d6;
+}
+
+.ghilogo{
+    margin-top: 20px;
+    height: 35px;
 }
 
 .smenu {
@@ -259,8 +265,8 @@ audio{
 }
 
 .smenu a:hover {
-    color: yellow;
-    background-color: #d6b821c7;
+    color: #0037b4;
+    background-color: #95b0e2e0;
 }
 
 .gnb1>ul>li:nth-child(1):hover .smenu {
