--- a/001.HTML/011.BS_STUDIO_Pj/002.site/css/intro.css
+++ b/001.HTML/011.BS_STUDIO_Pj/002.site/css/intro.css
@@ -8,6 +8,13 @@ body {
     height: 100vh;
     overflow: hidden;
     text-decoration: none;
+    background-color: #000;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 #video {
@@ -16,7 +23,7 @@ body {
     object-fit: cover;
 }
 
-.sdc{
+/* .sdc{
     position: fixed;
     height: auto;
     bottom: 0;
@@ -57,4 +64,4 @@ body {
     height: 3px;
     position: absolute;
     width: 3px;
-}
+} */
