--- a/001.HTML/011.BS_STUDIO_Pj/002.site/css/intro.css
+++ b/001.HTML/011.BS_STUDIO_Pj/002.site/css/intro.css
@@ -23,14 +23,14 @@ body {
     object-fit: cover;
 }
 
-audio {
+/* audio {
     position: fixed;
     height: 30px;
     bottom: 23px;
     left: 97vw;
     opacity: 10%;
     z-index: 999;
-}
+} */
 
 .sdc{
     position: fixed;
