--- a/001.HTML/010.Pj_BIFF/css/main.css
+++ b/001.HTML/010.Pj_BIFF/css/main.css
@@ -31,9 +31,9 @@ body {
     color: #fafafa;
 }
 
-/* body * {
-    outline: 1px dashed rgb(158, 158, 158);
-} */
+img{
+    vertical-align: middle;
+}
 
 .ibx {
     max-width: 1300px;
