--- a/001.HTML/000.T_Pj/4.uni/main.css
+++ b/001.HTML/000.T_Pj/4.uni/main.css
@@ -48,7 +48,7 @@ img{
     position: absolute;
     width: 150px;
     justify-content: space-around;
-    left: 40px;
+    left: 50px;
     top: 50%;
     transform: translateY(-50%);
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(11deg) brightness(115%) contrast(96%);
@@ -67,11 +67,13 @@ img{
 .gnb {
     position: relative;
     z-index: 1;
+    height: 51px;
 }
 .gnb .mainManu{
     position: absolute;
     left: calc(50% - 200px);
     top: 10px;
+    bottom: 0;
     width: 400px;
 }
 .mainManu::after{
@@ -82,6 +84,7 @@ img{
 .gnb .mainManu li{
     float: left;
     width: 100px;
+    height: 100%;
     text-align: center;
 }
 .gnb .mainManu>li>a{
@@ -91,6 +94,7 @@ img{
     color: #fff;
     padding: 10px 0 10px;
     transition: color .4s ease;
+    height: 100%;
 }
 .sMenu li{
     display: none;
@@ -131,9 +135,9 @@ img{
 }
 .cBtn{
     position: absolute;
-    top: 13px;
-    right: 30px;
-    font-size: 55px;
+    top: 36px;
+    right: 40px;
+    font-size: 40px;
     cursor: pointer;
     color: #fff;
 }
