--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -51,13 +51,42 @@ strong {
     box-sizing: border-box;
 }
 
-audio{
+.audioBox{
     position: absolute;
-    top: 45px;
-    right: 0;
-    width: 100px;
-    height: 15px;
+    top: 10%;
+    left: 20px;
 }
+.audio-wave {
+    position: relative;
+    width: 50px;
+    height: 50px;
+}
+
+.wave-animation {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) scale(0);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #0077cc;
+    animation: wave 2s infinite ease;
+    opacity: 0;
+    cursor: pointer;
+}
+
+@keyframes wave {
+    0% {
+        transform: translate(-50%, -50%) scale(0);
+        opacity: .9;
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0;
+    }
+}
+  
 
 /******************************************* 상단 *******************************************/
 #top {
