--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -29,7 +29,7 @@ body {
 a {
     color: #000;
     text-decoration: none;
-    font-size: 16px;
+    /* font-size: 16px; */
 }
 
 body {
@@ -293,8 +293,10 @@ strong {
     font-weight: bolder;
     display: block;
     transition: .5s;
-
 }
+/* .gnb1>ul>li>a{
+    font-size: 30px;
+} */
 
 .gnb1>ul>li:hover>a {
     color: #31da12;
@@ -311,6 +313,10 @@ strong {
     overflow: hidden;
     transition: height .4s ease-in-out;
 }
+
+/* .smenu a{
+    font-size: 24px;
+} */
 
 .smenu a:hover {
     color: #0037b4;
