--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -95,8 +95,18 @@ strong {
     font-size: 20px;
     font-weight: bold;
     color: #fff;
-
 }
+
+.audiotxt:hover {
+    color: #0061f5;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.audiotxt:active {
+    transform: scale(0.95);
+}
+
 /******************************************* 상단 *******************************************/
 #top {
     position: fixed;
