--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -20,21 +20,24 @@ ol {
 
 html,
 body {
-    /* overflow: hidden; */
     scroll-behavior: smooth;
     font-family: 'IM Fell English SC', serif;
     font-family: 'Poor Story', cursive;
 }
 
+body {
+    color: #333333;
+}
+
 a {
     color: #000;
     text-decoration: none;
-    /* font-size: 16px; */
 }
 
-body {
-    /* background-color: #fad9ce; */
-    color: #333333;}
+p{
+    font-size: 100%;
+    line-height: 1.5em;
+}
 
 b,
 strong {
@@ -105,7 +108,6 @@ strong {
     }
 }
 
-/* 메뉴 양쪽 등분할 박스 */
 .gnb2>div {
     position: relative;
     flex: 1;
@@ -162,7 +164,6 @@ strong {
     width: 100%;
     height: 100%;
     right: 20px;
-
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -173,7 +174,6 @@ strong {
     position: fixed;
     right: -100%;
     height: 100%;
-    /* 보이는 화면에 꽉참 */
     background-color: #8fb5c4;
     transition: right .4s ease-in-out;
     z-index: 9999;
@@ -501,27 +501,22 @@ h3{
     font-size: 80%;
     display: block;
 }
+
 .txtbx p{
     text-align: center;
     margin: 15px 0 0;
 }
-p{
-    font-size: 100%;
-    line-height: 1.5em;
-}
 
 .cbwrap .imgtxtbx > .imgbx{
-    box-sizing: border-box;
     text-align: center;
     position: relative;
     left: 0;
-    /* background-image: url(../img/sub4img/bars.svg); */
     background-image: url(../img/sub4img/poster1.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 550px auto;
-    line-height: 0;
 }
+
 .mainposter{
     display: block;
 }
@@ -537,7 +532,6 @@ p{
 
 .cont2{
     background-image: url(../img/sub4img/bottomback.jpeg);
-    /* background-color: #fad9ce; */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
